--- a/achievements.html
+++ b/achievements.html
@@ -20,7 +20,14 @@
     </div>
     <header>
         <nav class="navbar">
-            <div class="logo">Armstrong 7 Esports</div>
+            <div class="logo">
+                <a href="index.html">Armstrong 7 Esports</a>
+            </div>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="clips.html">Latest Clips</a></li>
@@ -28,6 +35,7 @@
                 <li><a href="roster.html">Roster Information</a></li>
             </ul>
         </nav>
+        
     </header>
     <main >
         <section class="achievements">
