--- a/achievements.html
+++ b/achievements.html
@@ -20,15 +20,7 @@
     </div>
     <header>
         <nav class="navbar">
-            <div class="logo">
-                <img src="Images/AS7 ESPORTS LOGO.jpg" alt="Armstrong 7 Esports Logo" style="height: 50px;"> <!-- Logo image -->
-                Armstrong 7 Esports
-            </div>
-            <div class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
+            <div class="logo">Armstrong 7 Esports</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="clips.html">Latest Clips</a></li>
@@ -36,7 +28,6 @@
                 <li><a href="roster.html">Roster Information</a></li>
             </ul>
         </nav>
-        
     </header>
     <main >
         <section class="achievements">
@@ -66,7 +57,10 @@
             <h2>Tier 2 Team</h2>
             <p>Trident Esports</p>
         </div>
-
+        <div class="player-card">
+            <h2>200k ORG PHASE</h2>
+            <p>Xillian ESPORTS</p>
+        </div>
         <div class="player-card">
             <h2>10k Winners</h2>
             <p>YXT Esports</p>
@@ -78,6 +72,11 @@
         <div class="player-card">
             <h2>50K ORG PHASE</h2>
             <p>NightOwl Esports</p>
+        </div>
+        <div class="player-card">
+            <h2>200k Quater Finalists</h2>
+            <p>Agra Esports </p>
+        </div>
         <div class="player-card">
             <h2>50k Grand Finalists</h2>
             <p>Nodwin PVR CUP</p>
@@ -97,6 +96,10 @@
         <div class="player-card">
             <h2>10K FINALISTS</h2>
             <p>ARISTOS CUP BY QA ESPORTS</p>
+        </div>
+        <div class="player-card">
+            <h2>Tier 2 Foothil Scrims</h2>
+            <p>Signify Esports</p>
         </div>
     </div>
 </section>
