--- a/roster.html
+++ b/roster.html
@@ -108,24 +108,16 @@
             <div class="newtons-cradle__dot"></div>
         </div>
     </div>
-    <nav class="navbar">
-        <div class="logo">
-            <img src="Images/AS7 ESPORTS LOGO.jpg" alt="Armstrong 7 Esports Logo" style="height: 50px;"> <!-- Logo image -->
-            Armstrong 7 Esports
-        </div>
-        <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="clips.html">Latest Clips</a></li>
-            <li><a href="achievements.html">Achievements</a></li>
-            <li><a href="roster.html">Roster Information</a></li>
-        </ul>
-    </nav>
-    
+    <header>
+        <nav class="navbar">
+            <div class="logo">Armstrong 7 Esports</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="clips.html">Latest Clips</a></li>
+                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="roster.html">Roster Information</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="roster" style="color: #0a0a0a; font-style: italic;">
