--- a/roster.html
+++ b/roster.html
@@ -126,11 +126,11 @@
             <h1>Roster Information</h1>
             <div class="roster-grid">
                 
-                <div class="player-card">
+                <!-- <div class="player-card">
                     <img src="Images/AS7xSARANG.png" alt="AS7xSarangJod" class="player-image">
                     <h2>AS7xSarangJod</h2>
                     <p>Role: In-Game Leader</p>
-                    <p>Age : 17</p>
+                    <p>Age : 17</p> -->
                 </div>
                 <div class="player-card">
                     <img src="Images/AS7xSpray.jpg" alt="AS7xSpray" class="player-image">
@@ -151,13 +151,13 @@
                     <p>Role: Filter / Assaulter</p>
                     <p>Age : 22</p>
                 </div>
-                <div class="player-card">
+                <!-- <div class="player-card">
                     <img src="Images/AS7xSAIMOG.jpg" alt="AS7xSaimOG" class="player-image">
                     <h2>AS7xSaimOG</h2>
                     <p>Role: Assaulter</p>
                     <p>Age : 17</p>
 
-                </div>
+                </div> -->
                 <div class="player-card">
                     <img src="Images/AS7xSora.jpg" alt="AS7xSoraIsLive" class="player-image">
                     <h2>AS7xSoraIsLive</h2>
