--- a/roster.html
+++ b/roster.html
@@ -133,18 +133,20 @@
                     <p>Age : 17</p> -->
                 <!-- </div> -->
                 <div class="player-card">
+                    <img src="Images/AS7xABHI.jpg" alt="AS7 xZORO" class="player-image">
+                    <h2>AS7xABHI</h2>
+                    <p>Role: IGl / Assaulter</p>
+                    <p>Age : 22</p>
+                </div>
+
+                <div class="player-card">
                     <img src="Images/AS7xSpray.jpg" alt="AS7xSpray" class="player-image">
                     <h2>AS7xSpray</h2>
                     <p>Role: Assaulter</p>
                     <p>Age : 21</p>
 
                 </div>
-                <div class="player-card">
-                    <img src="Images/AS7xABHI.jpg" alt="AS7 xZORO" class="player-image">
-                    <h2>AS7xABHI</h2>
-                    <p>Role: Assaulter</p>
-                    <p>Age : 22</p>
-                </div>
+
                 <div class="player-card">
                     <img src="Images/AS7xDEVMANUS.jpg" alt="AS7xDevManus" class="player-image">
                     <h2>AS7xDevManus</h2>
